fixed display problems on small screens

--- a/client/src/styles/Nav.module.scss
+++ b/client/src/styles/Nav.module.scss
@@ -44,3 +44,11 @@
 		}
 	}
 }
+
+@media only screen and (max-width: 375px) {
+	.navBar {
+		.rightLink {
+			font-size: 0.7rem;
+		}
+	}
+}
