--- a/client/src/styles/pages/Scores.module.scss
+++ b/client/src/styles/pages/Scores.module.scss
@@ -72,3 +72,11 @@
 		}
 	}
 }
+
+@media only screen and (max-width: 375px) {
+	.scoresWrapper {
+		.scores {
+			width: 300px;
+		}
+	}
+}
